# DRF_HW

./: .env.sample  .gitlab-ci.yml  Dockerfile  README.md  deploy.sh  docker-compose.yaml  pyproject.toml  requirements.txt
apps/courses/: models.py  pagination.py  permissions.py  services.py  tasks.py  tests.py  urls.py  validators.py
apps/courses/management/commands/: fill_course.py  fill_lesson.py  fill_payment.py  schedule.py
apps/courses/migrations/: 0001_initial.py  0002_lesson_course.py  0003_alter_lesson_course_payment.py  0004_alter_lesson_course.py  0005_course_owner_lesson_owner.py  0006_subscription.py  0007_alter_subscription_user.py  0008_alter_subscription_user.py  0009_alter_subscription_user.py  0010_course_price.py  0011_payment_payment_id_payment_payment_status.py  0012_course_updated_at_lesson_updated_at.py  0013_alter_course_updated_at_alter_lesson_updated_at.py  0014_remove_lesson_updated_at_alter_course_updated_at.py
apps/courses/serializers/: course.py  lesson.py  payment.py  subscription.py
apps/courses/views/: course.py  lesson.py  payment.py  subscription.py
apps/users/: models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
apps/users/management/commands/: fill_user.py
apps/users/migrations/: 0001_initial.py  0002_user_role.py  0003_user_name_alter_user_last_name_alter_user_role.py  0004_remove_user_name_alter_user_first_name.py
config/: settings.py  urls.py
coverage_report/: index.html
